--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
-SECRET_KEY = your-2555555-bit-secret
+ACCESS_SECRET = your-2555555-bit-secret
+REFRESH_SECRET = 123213131313
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=admin
+DB_NAME=admin
+DB_PASSWORD=admin
+
+REDIS_HOST=redis
+REDIS_PORT=6379
