--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,12 +33,8 @@ jobs:
         run: go test -v ./...
 
   lint:
-    strategy:
-      matrix:
-        go-version: [1.15.x]
-        os: [macos-latest, windows-latest, ubuntu-latest]
     name: lint
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up Go
